--- a/INSTALL
+++ b/INSTALL
@@ -12,6 +12,13 @@ Then executes:
  
  python build.py 
  
+Everytime you update the library or change configuration (config.ini)
+issue this command
+ 
+ pyhton build.py --clean
+ 
+In doubt issue always this last command.
+ 
 Note: p3recastnavigation uses a slightly modified version of "Panda 
 Module Builder" by tobspr (https://github.com/tobspr/P3DModuleBuilder)
 as build system, so refer to that for more informations.
