--- a/samples/python/README
+++ b/samples/python/README
@@ -1,10 +1,14 @@
 Running the sample
 ******************
 The python code shows the use of the p3recastnavigation module.
-To run the python sample you should copy the module (p3recastnavigation) 
+To run the python samples you should copy the module (p3recastnavigation) 
 into the "pyhton" folder, and run the command:
 
  python main.py
+
+or
+
+ python test.py
 
 Note: it should pointed out that the style and structure of sample program's 
 code is not really favored by the author, but it is solely intended to test 
