--- a/README
+++ b/README
@@ -16,3 +16,25 @@ p3recastnavigation is a LGPL v3 licensed open source project. A copy of the
 GNU LESSER GENERAL PUBLIC LICENSE is reported into COPYING file. 
 See also <http://www.gnu.org/licenses/>.
 
+Basic Usage
+***********
+
+p3recastnavigation has several objects to work with:
+
+- RNNavMeshManager: this is a unique object (singleton) whose main task is to 
+create/destroy RNNavMeshes and RNCrowdAgents
+- RNNavMEsh: represents the nav mesh on which they move the RNCrowdAgents
+- RNCrowdAgent: is the agent that moves to reach the target by following the 
+paths tracked down thanks to the nav mesh
+- Convex volumes: these represent specific areas of the nav mesh and have distinct 
+properties from the rest of the nav mesh
+- Off mesh connection: represent one-dimensional connections between disjointed 
+regions of the nav mesh, possibly having also distinct properties
+- Area types, flags and costs: these are the elements that allow you to set the 
+properties of convex volumes and off mesh connections, affecting, even dynamically, 
+choosing the path that agents follow to their targets
+
+To have a minimal example of use see the "test" application (both in python in c++) 
+in the samples folder. To see examples that show a wider range of use see the "main"
+applications (always in python and c++).
+
