--- a/samples/python/README
+++ b/samples/python/README
@@ -4,13 +4,9 @@ The python code shows the use of the p3recastnavigation module.
 To run the python samples you should copy the module (p3recastnavigation) 
 into the "pyhton" folder, and run the command:
 
- python main.py
+ python basic.py (or test1.py, or test2.py) 
 
-or
-
- python test.py
-
-Note: it should pointed out that the style and structure of sample program's 
-code is not really favored by the author, but it is solely intended to test 
-and show functionality exposed by the p3recastnavigation module.
-
+NOTE: it should pointed out that the programming style and structure of 
+the sample programs' code is not really favored by the author, but it 
+is solely intended to test and to show the functionality exposed by the 
+p3recastnavigation module.
